# Sort_Robotic_Arm

./: README.md
src/sort_robotic_arm_description/: CMakeLists.txt  package.xml
src/sort_robotic_arm_description/launch/: display.launch.xml
src/sort_robotic_arm_description/meshes/Arm_Base/: Arm1.STL  Arm2.STL  Arm3.STL  Base.STL  Waist.STL
src/sort_robotic_arm_description/meshes/Arm_Gripper/: Gear1.STL  Gear1_Space.STL  Gear2.STL  Gripper.STL  Gripper_Base.STL  Gripper_Link.STL  Links_Spacer.STL
src/sort_robotic_arm_description/meshes/Servos/: Micro_Servo.STL  Servo_MG996R.STL
src/sort_robotic_arm_description/rviz/: urdf_config.rviz
src/sort_robotic_arm_description/urdf/: arm_joints.xacro  arm_links.xacro  camera_plugin.xacro  common_properties.xacro  common_properties_gazebo.xacro  sort_robotic_arm.urdf.xacro
src/sort_robotic_arm_description/yaml/: config_yaml.yaml
src/sort_robotic_arm_gazebo/: CMakeLists.txt  package.xml
src/sort_robotic_arm_gazebo/include/: IK_calculation.hpp  arm_controller.hpp  object_detector.hpp
src/sort_robotic_arm_gazebo/launch/: sort_robotic_arm.launch.xml
src/sort_robotic_arm_gazebo/src/: IK_calculation.cpp  IK_calculation_old.cpp  arm_controller.cpp  arm_controller.hpp  main_arm_controller.cpp  main_object_detector.cpp  object_detector.cpp  object_detector.hpp  object_detector_old.cpp  object_detector_old.hpp
src/sort_robotic_arm_gazebo/world/: arm_world.world  green_ball.world  measure_cube.world  red_cube.world
src/sort_robotic_arm_interface/: CMakeLists.txt  package.xml
src/sort_robotic_arm_interface/action/: SendAngle.action  SendGoal.action
src/sort_robotic_arm_interface/msg/: CoordinatesList.msg
